--- a/public/css/style.css
+++ b/public/css/style.css
@@ -304,6 +304,20 @@ body {
     display: block;
   }
 
+  #floating-panel {
+    position: absolute;
+    top: 10px;
+    left: 25%;
+    z-index: 5;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+    text-align: center;
+    font-family: "Roboto", "sans-serif";
+    line-height: 30px;
+    padding-left: 10px;
+  }
+
   /*.mobile_nav_items{
     background: #2F323A;
     overflow: hidden;
