--- a/views/location.ejs
+++ b/views/location.ejs
@@ -59,6 +59,11 @@
     <!--sidebar end-->
     <div class="content">
       <h2>Location</h2>
+      <div id="floating-panel">
+        <input id="hide-markers" type="button" value="Hide Markers" />
+        <input id="show-markers" type="button" value="Show Markers" />
+        <input id="delete-markers" type="button" value="Delete Markers" />
+      </div>
       <div id="map" style="width: 100%; height: 700px"></div>
       <div id="legend"><h3>Legend</h3></div>
       
