--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,9 +58,14 @@
     <!--sidebar end-->
     <div class="content">
       <h2>Dashboard</h2>
-      <button>
-          Download
-      </button>
+      <div class="graph">
+        <div class="graph1">
+          <canvas id="GraphHarian" width="750" height="400"></canvas>
+        </div>
+        <div class="graph2">
+          <canvas id="GraphBulanan" width="400" height="250"></canvas>
+        </div>
+      </div>
     </div>
 
 
