--- a/views/details.ejs
+++ b/views/details.ejs
@@ -82,7 +82,6 @@
           <%})%>
           </tbody>
           </table>
-          <button>Download</button>
       </div>
 
     </div>
@@ -104,7 +103,7 @@
         ],
         "search":{
           "smart":false,
-          "caseInsensitive":false
+          "caseInsensitive":true
         }
         
       });
